--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
     //   progress.style.width = (((i - 1)/count) * 100) + '%';
     // }
   </script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ER6YRT2JPZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ER6YRT2JPZ');
+</script>
+
 </head>
 
 <body class="claro jimu-main-font">
